--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="row">
       <div class="col-md-6">
         <a class="navbar-brand, name" href="#">Ismael Lopez</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" style="background: whitesmoke" data-toggle="collapse"
+          data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
@@ -44,20 +44,42 @@
     </div>
   </nav>
 
+  <div class="container">
+    <h1 class="about-me">About Me</h1>
+    <br>
+    <div class="row">
+      <img class="col-md-4" src="IMG_0092.png" alt="photo" style="width:250px; height: 200px; float: left">
+      <p class="col-md-8" style="line-height:50px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+        doloremque modi tempora aperiam eum consequatur? Non sapiente expedita vero, nisi explicabo, odit, veritatis
+        deleniti consectetur numquam nemo unde inventore maiores.</p>
+    </div>
+    <br>
+    <div class="row">
+      <p style="line-height: 300%" class="col-md-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil esse
+        nisi facilis laboriosam ratione ex nemo laudantium odio quisquam veritatis! Itaque eos nostrum obcaecati
+        recusandae velit minus hic et sapiente.</p>
+    </div>
+    <div class="row">
+      <p style="line-height: 300%" class="col-md-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil esse
+        nisi facilis laboriosam ratione ex nemo laudantium odio quisquam veritatis! Itaque eos nostrum obcaecati
+        recusandae velit minus hic et sapiente.</p>
+    </div>
 
 
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-    crossorigin="anonymous"></script>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"></script>
 </body>
 <footer>
   <nav class="navbar fixed-bottom navbar-light bg-light, foot">
