--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-md-6">
                 <a class="navbar-brand, name" href="#">Ismael Lopez</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler" style="background: whitesmoke" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
