--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light, main">
     <div class="row">
       <div class="col-md-6">
-        <a class="navbar-brand, name" href="#">Ismael Lopez</a>
+        <h1 class="name">Ismael Lopez</h1>
         <button class="navbar-toggler" type="button" style="background: whitesmoke" data-toggle="collapse"
           data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
