--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light, main">
         <div class="row">
             <div class="col-md-6">
-                <a class="navbar-brand, name" href="#">Ismael Lopez</a>
-                <button class="navbar-toggler" style="background: whitesmoke" type="button" data-toggle="collapse"
+                    <h1 class="name">Ismael Lopez</h1>
+                    <button class="navbar-toggler" style="background: whitesmoke" type="button" data-toggle="collapse"
                     data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
