--- a/contact.html
+++ b/contact.html
@@ -22,29 +22,34 @@
     <!-- Header -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light, main">
-        <div class="row">
-            <div class="col-md-6">
-                    <h1 class="name">Ismael Lopez</h1>
-                    <button class="navbar-toggler" style="background: whitesmoke" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="container">
+            <div class="row">
                 <div class="col-md-6">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                    </ul>
+                    <h1 class="name">Ismael Lopez</h1>
+                    <button class="navbar-toggler" style="background: whitesmoke; float: none" type="button"
+                        data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="col-md-2"></div>
+                <div class="col-md-4">
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+        </div>
         </div>
     </nav>
 
