--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
         <br>
         <div class="row">
             <div class="col-md-4">
-                <a href="../assets/coming_soon.html" target="_blank"><img style="width: 250px; height: 125px"
+                <a href="../Psychic-Game/index.html" target="_blank"><img style="width: 250px; height: 125px"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfuEQR2-c1HqvweqMO6nJ50hb4UQlvukdoiVt1m-k7BSxxyUXVFw"
                         alt="pic"></a>
                 <h3 class="hm">Hang Man</h3>
