--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-4">
-                <a href="../assets/coming_soon.html" target="_blank"><img style="width: 250px; height: 125px;"
+                <a href="../unit-4-game/index.html" target="_blank"><img style="width: 250px; height: 125px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRF-UcZsrF3F1MqvfxT0VHPZ9wIjCcz9hkF-Uzik1g2hCBsJPnL"
                         alt="pic"></a>
                 <h3 class="hm_1">RPG Game</h3>
