--- a/portfolio.html
+++ b/portfolio.html
@@ -57,14 +57,14 @@
                 <a href="../Psychic-Game/index.html" target="_blank"><img style="width: 250px; height: 125px"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfuEQR2-c1HqvweqMO6nJ50hb4UQlvukdoiVt1m-k7BSxxyUXVFw"
                         alt="pic"></a>
-                <h3 class="hm">Hang Man</h3>
+                <h3 class="hm">Psychic Game</h3>
             </div>
             <div class="col-md-2"></div>
             <div class="col-md-4">
                 <a href="../unit-4-game/index.html" target="_blank"><img style="width: 250px; height: 125px;"
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRF-UcZsrF3F1MqvfxT0VHPZ9wIjCcz9hkF-Uzik1g2hCBsJPnL"
+                        src="avengers-infinity-war-marvel-cinematic-universe-infinity-stones-thanos-infinity-gauntlet.jpg"
                         alt="pic"></a>
-                <h3 class="hm_1">RPG Game</h3>
+                <h3 class="hm_1">Crystal Game</h3>
             </div>
         </div>
         <br><br>
